# gpu-forge

./: .gitignore  CHANGELOG.md  README.md
attention-proto/: Cargo.toml  SYNTHESIS.md  bench.json  build.rs  findings.jsonl
attention-proto/benches/: burn_extension.rs  constant_overhead.rs  cubecl_comparison.rs  flash_attention.rs  function_stitch.rs  linear_attention.rs  paged_attention.rs  variant_overhead.rs
attention-proto/scripts/: validate_findings.py
attention-proto/shaders/: flash_attention.metal  flash_attention_stitched.metal  gqa_remap.metal  linear_attention.metal  paged_attention.metal  paged_reduce.metal  rope.metal  types.h
attention-proto/src/: device.rs  encode.rs  kb.rs  lib.rs  pipeline.rs  proto1_flash.rs  proto2_stitch.rs  proto3_paged.rs  proto4_constants.rs  proto5_cubecl.rs  proto6_fla.rs  proto7_variants.rs  proto8_burn.rs  timing.rs  types.rs
attention-proto/tests/: integration.rs
gpu-query/: Cargo.toml  build.rs
gpu-query/.github/workflows/: ci.yml
gpu-query/ai/tasks/benchmarks/: BREAKDOWN.md
gpu-query/ai/tasks/catalog-cache/: BREAKDOWN.md
gpu-query/ai/tasks/executor-cache/: BREAKDOWN.md
gpu-query/ai/tasks/persistent-executor/: BREAKDOWN.md
gpu-query/ai/tasks/spec/: OVERVIEW.md  PM.md  QA.md  TECH.md  UX.md
gpu-query/ai/tasks/warm-cache/: BREAKDOWN.md
gpu-query/benches/: aggregate_throughput.rs  autonomous_latency.rs  filter_throughput.rs  query_latency.rs  scan_throughput.rs  sort_throughput.rs
gpu-query/fuzz/: Cargo.toml
gpu-query/fuzz/corpus/csv/: empty_fields.csv  many_columns.csv  pipe_delimited.csv  single_column.csv  tab_delimited.csv  unicode_headers.csv  (+1 more)
gpu-query/fuzz/fuzz_targets/: fuzz_csv_parser.rs  fuzz_json_parser.rs
gpu-query/shaders/: aggregate.metal  autonomous_types.h  compact.metal  csv_parse.metal  dict_build.metal  filter.metal  fused_query.metal  json_parse.metal  parquet_decode.metal  prepare_dispatch.metal  schema_infer.metal  sort.metal  types.h
gpu-query/src/: lib.rs  main.rs
gpu-query/src/cli/: args.rs  commands.rs  mod.rs
gpu-query/src/gpu/: device.rs  encode.rs  executor.rs  metrics.rs  mod.rs  pipeline.rs  types.rs
gpu-query/src/io/: catalog.rs  catalog_cache.rs  csv.rs  format_detect.rs  json.rs  mmap.rs  mod.rs  parquet.rs
gpu-query/src/sql/: logical_plan.rs  mod.rs  optimizer.rs  parser.rs  physical_plan.rs  types.rs
gpu-query/src/storage/: columnar.rs  dictionary.rs  mod.rs  null_bitmap.rs  schema.rs
gpu-query/src/tui/: app.rs  autocomplete.rs  catalog.rs  dashboard.rs  editor.rs  event.rs  gradient.rs  mod.rs  results.rs  themes.rs  ui.rs
gpu-query/test-data/: sales.csv
gpu-query/tests/: autonomous_integration.rs  autonomous_stress.rs  e2e_cli.rs  e2e_csv.rs  e2e_errors.rs  e2e_json.rs  e2e_parquet.rs  gpu_aggregate.rs  gpu_batch.rs  gpu_cache.rs  gpu_csv.rs  gpu_dispatch.rs  gpu_filter.rs  gpu_json.rs  gpu_parquet.rs  gpu_schema.rs  gpu_sort.rs
gpu-query/tests/golden/: csv_sum_amount.csv  csv_sum_filtered.csv
gpu-search/: .gitignore  Cargo.toml  FEATURES.md  build.rs  test_bench.json
gpu-search/benches/: content_search.rs  grouped_scroll.rs  index_load.rs  io_latency.rs  pipeline_profile.rs  search_latency.rs  search_throughput.rs
gpu-search/scripts/: check_bench_regression.py
gpu-search/shaders/: batch_search.metal  content_search.metal  path_filter.metal  search_types.h  turbo_search.metal
gpu-search/specs/gpu-search-false-positives/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
gpu-search/specs/gpu-search-overhaul-3/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
gpu-search/src/: error.rs  lib.rs  main.rs
gpu-search/src/gpu/: device.rs  executor.rs  mod.rs  pipeline.rs  types.rs  work_queue.rs
gpu-search/src/index/: cache.rs  content_builder.rs  content_daemon.rs  content_index_store.rs  content_snapshot.rs  content_store.rs  daemon.rs  exclude.rs  fsevents.rs  gcix.rs  global.rs  gpu_index.rs  gpu_loader.rs  gsix_v2.rs  index_writer.rs  metal_buffer.rs  mod.rs  scanner.rs  shared_index.rs  snapshot.rs  store.rs  watcher.rs
gpu-search/src/io/: batch.rs  gpu_io.rs  mmap.rs  mod.rs
gpu-search/src/search/: binary.rs  cancel.rs  channel.rs  content.rs  ignore.rs  mod.rs  orchestrator.rs  profile.rs  ranking.rs  streaming.rs  types.rs  verify.rs
gpu-search/src/ui/: actions.rs  app.rs  filters.rs  highlight.rs  keybinds.rs  mod.rs  path_utils.rs  results_list.rs  search_bar.rs  status_bar.rs  theme.rs  watchdog.rs
gpu-search/tests/: bench_search_scenarios.rs  test_content_vs_disk.rs  test_false_positives.rs  test_filesystem_edge_cases.rs  test_fp_orchestrator.rs  test_gpu_cpu_consistency.rs  test_gpu_memory.rs  test_index.rs  test_index_proptest.rs  test_index_scale.rs  test_orchestrator_integration.rs  test_proptest.rs  test_root_search.rs  test_search_accuracy.rs  test_stale_results.rs  test_stress.rs
metal-forge-compute/forge-bench/: Cargo.toml
metal-forge-compute/forge-bench/src/: cli.rs  config.rs  data_gen.rs  harness.rs  main.rs  stats.rs
metal-forge-compute/forge-filter/: Cargo.toml  README.md  build.rs
metal-forge-compute/forge-filter/benches/: filter_benchmark.rs
metal-forge-compute/forge-filter/shaders/: filter.metal
metal-forge-compute/forge-filter/src/: arrow.rs  lib.rs
metal-forge-compute/forge-runtime/: Cargo.toml  build.rs
metal-forge-compute/forge-runtime/shaders/: gather.metal
metal-forge-compute/forge-runtime/src/: buffer.rs  context.rs  gather.rs  lib.rs  pipeline.rs
metal-forge-compute/forge-runtime/tests/: compat_test.rs  pipeline_tests.rs  poc_test.rs
metal-forge-compute/forge-sort/: Cargo.toml  README.md  build.rs
metal-forge-compute/forge-sort/benches/: sort_benchmark.rs
metal-forge-compute/forge-sort/shaders/: sort.metal
metal-forge-compute/forge-sort/src/: lib.rs  metal_helpers.rs
metal-forge-compute/forge-sort/tests/: correctness.rs  correctness_argsort.rs  correctness_f32.rs  correctness_f64.rs  correctness_i32.rs  correctness_i64.rs  correctness_sort_pairs.rs  correctness_u64.rs  performance.rs  regression.rs
(+528 files in other folders)
