[package]
name = "gpu-search"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated filesystem search tool for Apple Silicon"

[dependencies]
# Metal / Apple GPU
objc2 = "0.6"
objc2-metal = "0.3"
objc2-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

# UI
eframe = "0.31"

# Syntax highlighting
syntect = "5"

# Parallelism
rayon = "1"

# .gitignore parsing + directory walking
ignore = "0.4"

# Platform directories (~/.gpu-search/)
dirs = "6"

# Fast byte search
memchr = "2"

# System FFI (mmap, etc.)
libc = "0.2"

# Cross-thread channels
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "search_throughput"
harness = false

[[bench]]
name = "io_latency"
harness = false

[[bench]]
name = "search_latency"
harness = false
