[package]
name = "forge-bench"
version = "0.1.0"
edition = "2021"
description = "GPU compute benchmark harness for Apple Silicon"

[dependencies]
forge-primitives = { path = "../forge-primitives" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
comfy-table = "7"
colored = "2"
indicatif = "0.17"
rayon = "1"
rand = "0.8"
chrono = "0.4"
