[package]
name = "forge-filter"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
license = "AGPL-3.0-only"
repository = "https://github.com/kavanaghpatrick/gpu-forge"
homepage = "https://github.com/kavanaghpatrick/gpu-forge/tree/main/metal-forge-compute/forge-filter"
documentation = "https://docs.rs/forge-filter"
description = "GPU filter+compact for Apple Silicon — 10x+ over Polars on numeric WHERE clauses"
keywords = ["gpu", "filter", "metal", "compact", "apple-silicon"]
categories = ["algorithms", "hardware-support"]
include = ["src/**/*", "shaders/**/*", "build.rs", "README.md", "LICENSE"]

[features]
default = []
arrow = ["dep:arrow-array", "dep:arrow-buffer", "dep:arrow-schema"]

[dependencies]
objc2 = "0.6"
objc2-metal = "0.3"
objc2-foundation = "0.3"
thiserror = "2"
arrow-array = { version = "54", optional = true }
arrow-buffer = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
criterion = "0.5"

[[bench]]
name = "filter_benchmark"
harness = false
